Ran Cleanup. Time taken in seconds: 1121